--- a/app/src/main/res/layout/item_chat_other.xml
+++ b/app/src/main/res/layout/item_chat_other.xml
@@ -7,7 +7,7 @@
         android:id="@+id/tvMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/teal"
+        android:background="@color/pink"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:text="test message"
