--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,121 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp" >
+    android:layout_height="250dp"
+    android:layout_gravity="top"
+    >
+
+
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_alignParentTop="true"
+        android:alpha="1"
+        />
+
 
     <TextView
         android:id="@+id/tvEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/event_name_label"
-        android:textColor="@color/teal"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="36sp"
+        android:layout_alignParentTop="true"
+        android:background="@color/brown_transparent"
+        android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/tvEventDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvEventName"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="@string/event_desc_label" />
 
-    <LinearLayout
-        android:id="@+id/llDate"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/rlBadge"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvEventDescription"
         android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        android:orientation="horizontal" >
-
-        <ImageView
-            android:id="@+id/ivCalendar"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@string/calendar_icon"
-            android:src="@drawable/ic_calendar" />
+        android:layout_below="@+id/tvEventName"
+        >
 
         <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:text="@string/date_label" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llDate"
-        android:gravity="center_vertical"
-        android:layout_below="@+id/llDate" >
-
-        <ImageView
-            android:id="@+id/ivClock"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@string/clock_icon"
-            android:src="@drawable/ic_clock" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="SUNDAY"
+            android:textSize="48sp"
+            android:id="@+id/tvDay"
+            android:textColor="#ffffff"
+            android:background="@color/teal_transparent"
+            android:layout_marginTop="0dp"
+            android:layout_centerHorizontal="true" />
 
         <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvDateNumber"
+            android:layout_width="fill_parent"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:text="@string/time_label" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/llLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llTime"
-        android:gravity="center_vertical"
-        android:layout_below="@+id/llTime" >
-
-        <ImageView
-            android:id="@+id/ivLocation"
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_marginRight="5dp"
-            android:contentDescription="@string/location_icon"
-            android:src="@drawable/ic_location" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="23"
+            android:textSize="72sp"
+            android:textColor="#Ffffff"
+            android:layout_below="@+id/tvDay"
+            android:background="@color/pink_transparent"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true" />
 
         <TextView
-            android:id="@+id/tvLocation"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvMonth"
+            android:layout_below="@+id/tvDateNumber"
+            android:layout_width="fill_parent"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:text="@string/location_label" />
-    </LinearLayout>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="DECEMBER"
+            android:textSize="24sp"
+            android:textColor="#Ffffff"
+            android:background="@color/pink_transparent"
+            android:paddingBottom="10dp"
+            android:layout_centerHorizontal="true" />
 
-    <LinearLayout
-        android:id="@+id/llRSVP"
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/llTime"
-        android:gravity="center_vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_below="@+id/llLocation" >
+        android:layout_toRightOf="@+id/rlBadge"
+        >
 
         <TextView
-            android:id="@+id/tvRSVPStatus"
+            android:id="@+id/tvEventDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rsvp_not" />
-
-        <Button
-            android:id="@+id/btnRSVP"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_below="@id/tvEventName"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:visibility="gone"
-            android:text="@string/action_rsvp" />
+            android:text="@string/event_desc_label" />
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/llDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvEventDescription"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/ivCalendar"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginRight="5dp"
+                android:contentDescription="@string/calendar_icon"
+                android:src="@drawable/ic_calendar" />
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date_label" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/llDate"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:layout_below="@+id/llDate" >
+
+            <ImageView
+                android:id="@+id/ivClock"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginRight="5dp"
+                android:contentDescription="@string/clock_icon"
+                android:src="@drawable/ic_clock" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time_label" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/llTime"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:layout_below="@+id/llTime" >
+
+            <ImageView
+                android:id="@+id/ivLocation"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginRight="5dp"
+                android:contentDescription="@string/location_icon"
+                android:src="@drawable/ic_location" />
+
+            <TextView
+                android:id="@+id/tvLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/location_label" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llRSVP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/llTime"
+            android:gravity="center_vertical"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:visibility="gone"
+            android:layout_below="@+id/llLocation" >
+
+            <TextView
+                android:id="@+id/tvRSVPStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/rsvp_not" />
+
+            <Button
+                android:id="@+id/btnRSVP"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="@string/action_rsvp" />
+
+        </LinearLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
