--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:layout_gravity="top"
+    android:paddingBottom="2dp"
+    android:background="@android:color/black"
     >
 
 
@@ -19,12 +21,12 @@
 
     <TextView
         android:id="@+id/tvEventName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/event_name_label"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:layout_alignParentTop="true"
         android:background="@color/brown_transparent"
         android:padding="10dp"
