Add date badge alternating sides.

--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="275dp"
     android:layout_gravity="top"
     android:paddingBottom="2dp"
     android:background="@android:color/black"
@@ -34,26 +34,40 @@
 
 
     <RelativeLayout
+        android:id="@+id/rlDay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/pink_transparent"
+        >
+
+        <TextView
+            android:id="@+id/tvDay"
+            android:layout_width="100dp"
+            android:gravity="center_horizontal"
+            android:layout_height="wrap_content"
+            android:text="SUNDAY"
+            android:textSize="40sp"
+            android:textColor="#ffffff"
+            android:background="@color/teal_transparent"
+            android:layout_centerHorizontal="true"
+            />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
         android:id="@+id/rlBadge"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
         android:layout_below="@+id/tvEventName"
+        android:layout_above="@+id/rlDay"
+        android:background="@color/pink_transparent"
         >
-
-        <TextView
-            android:id="@+id/tvDay"
-            android:layout_width="fill_parent"
-            android:gravity="center_horizontal"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="SUNDAY"
-            android:textSize="40sp"
-            android:textColor="#ffffff"
-            android:background="@color/teal_transparent"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
 
         <TextView
             android:id="@+id/tvDateNumber"
@@ -65,8 +79,6 @@
             android:text="23"
             android:textSize="72sp"
             android:textColor="#Ffffff"
-            android:layout_below="@+id/tvDay"
-            android:background="@color/pink_transparent"
             android:paddingTop="10dp"
             android:layout_centerHorizontal="true" />
 
@@ -80,10 +92,9 @@
             android:text="DECEMBER"
             android:textSize="24sp"
             android:textColor="#Ffffff"
-            android:background="@color/pink_transparent"
             android:paddingBottom="10dp"
             android:layout_centerHorizontal="true"
-            android:layout_above="@+id/tvDay"
+
             />
 
     </RelativeLayout>
@@ -91,16 +102,16 @@
 
 
     <RelativeLayout
+        android:layout_toRightOf="@+id/rlBadge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/rlBadge"
+        android:layout_below="@id/tvEventName"
         >
 
         <TextView
             android:id="@+id/tvEventDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tvEventName"
             android:ellipsize="end"
             android:maxLines="2"
             android:visibility="gone"
